--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "an assesment test for backend role",
   "main": "server.js",
   "scripts": {
-    "server": "nodemon backend/server.js"
+    "server": "nodemon backend/server.js",
+    "build": "webpack && babel src --out-dir dist"
   },
   "repository": {
     "type": "git",
@@ -17,11 +18,18 @@
   },
   "homepage": "https://github.com/codeironside/Digital-Talents#readme",
   "dependencies": {
+    "babel": "^6.23.0",
+    "cluster": "^0.7.7",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
     "express-validator": "^6.14.3",
     "jsonwebtoken": "^9.0.0",
-    "mongoose": "^6.8.4"
+    "mongoose": "^6.8.4",
+    "webpack": "^5.75.0"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "webpack-cli": "^5.0.1"
   }
 }
