--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "server.js",
   "scripts": {
     "start": "backend/server.js",
-    "server": "nodemon backend/server.js",
-    "build": "webpack && babel src --out-dir dist"
+    "server": "nodemon backend/server.js"
   },
   "repository": {
     "type": "git",
