--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "digital-talents",
   "version": "1.0.0",
   "description": "an assesment test for backend role",
-  "main": "server.js",
+  "main": "backend/server.js",
   "scripts": {
     "start": "backend/server.js",
     "server": "nodemon backend/server.js"
