--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "an assesment test for backend role",
   "main": "server.js",
   "scripts": {
-    "start": "backend/server.js",
+    "start": "node backend/server.js",
     "server": "nodemon backend/server.js"
   },
   "repository": {
